--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 	<div class="limiter">
 		<div class="container-login100">
 			<div class="wrap-login100 p-l-55 p-r-55 p-t-65 p-b-50">
-				<form class="login100-form validate-form" method="POST">
+				<form class="login100-form validate-form" method="POST" action="/authen">
 					<span class="login100-form-title p-b-33">
 						Account Login
 					</span>
