--- a/info.html
+++ b/info.html
@@ -3,9 +3,47 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Info</title>
+    <link rel="stylesheet" type="text/css" href="css/info.css">
 </head>
-<body>
-    hello
+<body style="background-color: #e9faff;">
+    <section>
+        <div class="container">
+            <div class="row">
+                
+                <!--Profile Card 3-->
+                <div class="col-md-4">
+                    <div class="card profile-card-3">
+                        <div class="background-block">
+                            <img src="images/abstract.jpg" alt="profile-background" class="background"/>
+                        </div>
+                        <div class="profile-thumb-block">
+                            <img src="images/vendetta.png" alt="profile-image" class="profile"/>
+                        </div>
+                        <div class="card-content">
+                            <h2>
+                                <span> Nguyễn Hoàng Dũng </span>
+                                <small> University of Science </small>
+                            </h2>
+                        </div>
+                    </div>
+                </div>
+                
+            </div>
+        </div>
+    </section>
+
+    <!-- Latest compiled and minified CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
+
+    <!-- jQuery library -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+
+    <!-- Popper JS -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+
+    <!-- Latest compiled JavaScript -->
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
+
 </body>
 </html>
