--- a/info.html
+++ b/info.html
@@ -28,6 +28,22 @@
                         </div>
                     </div>
                 </div>
+                <div class="col-md-4">
+                    <div class="card profile-card-3">
+                        <div class="background-block">
+                            <img src="images/abstract.jpg" alt="profile-background" class="background"/>
+                        </div>
+                        <div class="profile-thumb-block">
+                            <img src="images/vendetta.png" alt="profile-image" class="profile"/>
+                        </div>
+                        <div class="card-content">
+                            <h2>
+                                <span> Nguyễn Đăng Trung Tiến </span>
+                                <small> University of Science </small>
+                            </h2>
+                        </div>
+                    </div>
+                </div>
                 
             </div>
         </div>
