add button link to files.html

--- a/info.html
+++ b/info.html
@@ -44,8 +44,8 @@
                         </div>
                     </div>
                 </div>
-                
             </div>
+            <a href="/files.html" class="btn btn-primary active" role="button" aria-pressed="true" style="margin: 15px 0px;">Sharing List</a>
         </div>
     </section>
 
