--- a/info.html
+++ b/info.html
@@ -18,7 +18,7 @@
                             <img src="images/abstract.jpg" alt="profile-background" class="background"/>
                         </div>
                         <div class="profile-thumb-block">
-                            <img src="images/vendetta.png" alt="profile-image" class="profile"/>
+                            <img src="images/Dung.png" alt="profile-image" class="profile"/>
                         </div>
                         <div class="card-content">
                             <h2>
@@ -34,7 +34,7 @@
                             <img src="images/abstract.jpg" alt="profile-background" class="background"/>
                         </div>
                         <div class="profile-thumb-block">
-                            <img src="images/vendetta.png" alt="profile-image" class="profile"/>
+                            <img src="images/Tien.png" alt="profile-image" class="profile"/>
                         </div>
                         <div class="card-content">
                             <h2>
